# Blog

./: .gitignore  Blog.csproj  Blog.sln  LICENSE  Program.cs  README.md
ClientApp/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
ClientApp/public/: index.html
ClientApp/src/: App.js  AppRoutes.js  setupProxy.js  store.js
ClientApp/src/components/: Article.js  Game.js  Home.js  Image.js  Layout.js  Music.js  NavMenu.js
Controllers/: ArticleController.cs  GameController.cs  ImageController.cs  MusicController.cs
Models/: Article.cs  BlogContext.cs  Game.cs  Image.cs  Music.cs
Pages/: Error.cshtml.cs
Properties/: launchSettings.json
client/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
client/src/: App.vue  main.js
client/src/components/: APlayer.vue  HelloWorld.vue  PageArticle.vue  PageGame.vue  PageImage.vue  PageMusic.vue
server/: .gitignore  Program.cs  README.md  flaskr.db  orator.yml  package-lock.json  pyproject.toml  server.csproj
server/Controllers/: ArticleController.cs  GameController.cs  ImageController.cs  MusicController.cs
server/Models/: Article.cs  BlogContext.cs  Game.cs  Image.cs  Music.cs
server/Properties/: launchSettings.json
server/flaskr/: __init__.py  __main__.py  db.py  route.py
server/migrations/: 2020_06_24_054802_create_articles_table.py  2020_06_24_054810_create_images_table.py  2020_06_24_054817_create_musics_table.py  2020_06_29_044107_create_games_table.py
server/models/: __init__.py  article.py  game.py  image.py  music.py
