[tool.poetry]
name = "blog"
version = "0.1.0"
description = "LeieXoyo's Blog"
authors = ["LeieXoyo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
orator = "^0.9.9"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
